# gpu-dl-playground

./: .gitignore  KAGGLE_WORKFLOW.md  MAC_SETUP_GUIDE.md  README.md  pyproject.toml  test_workflow.py
kernels/: add.py  triton_kernels.py
scripts/: kaggle_sync.py  lightning_sync.py  setup_local_dev.sh
