[project]
name = "gpu-dl-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "modal>=1.1.3",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "ipython>=9.5.0",
    "pytest>=8.4.1",
]
